[package]
name = "tx_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1"
csv = "1.1"
error-stack = "0.1"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "bank"
harness = false
